DT-2993: Clean up missing User entities and FKs (#2827)